@@ -488,37 +488,29 @@ iv
 \subsection*{2.4~~~Definition Lists}
 \begin{description}
 %[visit_definition_list_item]
-\item[{Term}] %[visit_definition]
-
+\item[{Term}] 
 Definition
 
-%[depart_definition]
 %[depart_definition_list_item]
 %[visit_definition_list_item]
 \item[{Term}] (\textbf{classifier})
-%[visit_definition]
 
 Definition paragraph 1.
 
 Definition paragraph 2.
 
-%[depart_definition]
 %[depart_definition_list_item]
 %[visit_definition_list_item]
-\item[{Term}] %[visit_definition]
-
+\item[{Term}] 
 Definition
 
-%[depart_definition]
 %[depart_definition_list_item]
 %[visit_definition_list_item]
 \item[{Term}] (\textbf{classifier one})
 (\textbf{classifier two})
-%[visit_definition]
 
 Definition
 
-%[depart_definition]
 %[depart_definition_list_item]
 \end{description}
 
@@ -560,7 +552,6 @@ doesn't get stripped away.)
 \subsection*{2.6~~~Option Lists}
 
 For listing command-line options:
-% [option list]
 \begin{optionlist}{3cm}
 \item [-a]  
 command-line option ``a''
